feat: Add new operation to get a restaurant by its identifier (#12)
* Start using semver comments in dependabot

* Added new parameters to avoid exit on timeout

* Add offset and limit as flags in the proper cobra command

* Improvements in the dashboard also adding a new panel to monitor restaurant creation in database

* Simplify infra scripts

* Tidy and sync modules

* Automate grafana dashboard import when creating the infra

* Skip resource creation in Grafana for stop/start operations

* feat: Allow get a restaurant by its id
